css/styles.css
/* ... */
#header-portrait #nav-portrait input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}
#header-portrait #nav-portrait input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}
#header-portrait #nav-portrait #menu {
  position: absolute;
  top: calc(8vh - (8vh - 24px) / 2);
  left: calc(56px - 100vw);
  width: 100vw;
  height: -moz-fit-content;
  height: fit-content;
  padding: 3.5rem 0;
  background-color: rgb(255, 255, 255);
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  opacity: 0;
  transition: opacity 0.5s ease;
  transform: scale(0);
  border-bottom: 0.5px solid black;
}
#header-portrait #nav-portrait #menu li {
  padding: 1.25rem 0;
  font-size: 1.55rem;
  color: black;
  font-weight: 600;
  width: -moz-fit-content;
  width: fit-content;
  letter-spacing: 1px;
}
#header-portrait #nav-portrait #menu #order-online {
  color: white;
  background-color: rgb(255, 140, 0);
  margin-top: 0.75rem;
  padding: 0.5rem 1rem;
  border-radius: 10px;
  letter-spacing: 0;
}
#header-portrait #nav-portrait input:checked ~ #menu {
  opacity: 1;
  transform: scale(1);
}

#header-landscape #nav-landscape {
  display: none;
}

#footer {
  background-color: black;
  padding: 0 1.75rem;
}
#footer p {
  text-align: right;
  color: darkgrey;
  font-size: 0.75rem;
  line-height: 1.25rem;
  letter-spacing: 0.15px;
}
#footer p a {
  color: white;
}

h1 {
  font-family: "Rubik Mono One", monospace;
  font-weight: 400;
}

h3 {
  font-family: "Rubik Mono One", monospace;
  font-weight: 200;
}

body {
  font-family: "Ruda", sans-serif;
}

.background {
  background: url("../images/JCD.jpg") center center fixed no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: -3;
  filter: brightness(40%);
}

#first-section {
  gap: 3rem;
  scroll-snap-align: center;
}
#first-section .store-name {
  font-size: 3rem;
  line-height: 4rem;
  padding-top: calc(4rem + 8vh);
}
#first-section .store-name p {
  color: rgba(245, 245, 245, 0.75);
  font-size: 1rem;
  line-height: 3rem;
  font-weight: 200;
}
#first-section #store-info {
  text-align: left;
  gap: 1rem;
}
#first-section #store-info .info {
  background-color: rgba(0, 0, 0, 0.5);
  border: 1px solid white;
  border-radius: 3px;
  height: 20vh;
  width: 38vw;
  padding-left: 1rem;
}
#first-section #store-info .info p #holidays {
  font-size: 0.65rem;
  color: rgb(190, 190, 190);
}
#first-section #store-info #address p {
  line-height: 1.5rem;
}
#first-section #store-info #address:hover {
  cursor: pointer;
}
#first-section #store-info #open-hours {
  gap: 0.75rem;
}
#first-section #double-down img {
  width: 15vw;
}

#second-section #first-part {
  height: 100vh;
  scroll-snap-align: start;
}
#second-section #first-part .store-name {
  padding: calc(2rem + 8vh) 0 2.5rem 0;
  font-size: 2.25rem;
  line-height: 3rem;
}
#second-section #first-part #images {
  gap: 0.75rem;
  width: -moz-fit-content;
  width: fit-content;
  margin: 0 auto;
}
#second-section #first-part #images .grid-item {
  width: 30vw;
  height: 12vh;
}
#second-section #first-part #images #grid-1 {
  background-image: url("../images/grill.jpg");
  background-position: center;
  background-size: cover;
  grid-column: 1;
  grid-row: 1;
  border-radius: 20px 0 0 0;
}
#second-section #first-part #images #grid-2 {
  background-image: url("../images/banchan.jpg");
  background-position: center;
  background-size: cover;
  grid-column: 1;
  grid-row: 2;
  border-radius: 0 0 0 20px;
}
#second-section #first-part #images #grid-3 {
  background-image: url("../images/wrap.jpg");
  background-position: center;
  background-size: cover;
  grid-column: 2;
  grid-row: 1;
  border-radius: 0 20px 0 0;
}
#second-section #first-part #images #grid-4 {
  background-image: url("../images/kimchistew.jpg");
  background-position: center;
  background-size: cover;
  grid-column: 2;
  grid-row: 2;
  border-radius: 0 0 20px 0;
}
#second-section #first-part #welcome-message {
  position: relative;
}
#second-section #first-part #welcome-message #yes-break {
  display: none;
}
#second-section #first-part #welcome-message .orange-font {
  padding: 2rem 0 1rem 0;
  font-size: 1rem;
  line-height: 1.65rem;
  letter-spacing: 0.25px;
  font-weight: 700;
}
#second-section #first-part #welcome-message hr {
  width: 60%;
  margin: 0 auto;
  height: 0.5px;
}
#second-section #first-part #welcome-message .gray-font {
  font-weight: 200;
  padding: 0.95rem 0;
  line-height: 1.5rem;
}
#second-section #second-part {
  height: 90vh;
  scroll-snap-align: start;
}
#second-section #second-part a {
  color: white;
}
#second-section #second-part #map {
  height: 60vh;
  padding: calc(3rem + 8vh) 0 3rem 0;
}
#second-section #second-part #map iframe {
  width: 280px;
  height: 280px;
  border: 0.5px solid black;
}
#second-section #second-part #map a {
  margin: 1.75rem auto 0 auto;
  width: -moz-fit-content;
  width: fit-content;
  background-color: rgb(255, 140, 0);
  padding: 0.75rem 1.25rem;
  border-radius: 15px;
}
#second-section #second-part #map #landscape-only {
  display: none;
}
#second-section #second-part .store-name {
  font-size: 1.75rem;
  line-height: 2.5rem;
  height: 20vh;
}
#second-section #second-part #white-background {
  width: 100vw;
  height: 122vh;
  background-color: white;
  position: absolute;
  top: 142vh;
  z-index: -2;
}

#footer {
  height: 10vh;
}

#section-menu {
  min-height: 92vh;
  margin-top: 8vh;
}
#section-menu #full-menu {
  margin-top: 8vh;
  width: 80vw;
  background-color: white;
  border-radius: 15px;
  padding: 1.25rem 0;
}
#section-menu #full-menu .meal-type {
  padding-top: 0.75rem;
}
#section-menu #full-menu h3 {
  padding-bottom: 0.75rem;
}
#section-menu #full-menu p {
  color: black;
  padding: 0 2rem 0.5rem 2rem;
}
#section-menu #footer {
  width: 100vw;
}
/* ... */

